# elixir-rustler_elixir_fun

./: .gitignore  .mix.exs.~undo-tree~  LICENSE  README.md  mix.exs  my-prof.profile
.github/workflows/: ci.yml
bench/: call_overhead.ex
lib/: .rustler_elixir_fun.ex.~undo-tree~  rustler_elixir_fun.ex
lib/rustler_elixir_fun/: .fun_execution_server.ex.~undo-tree~  .internal.ex.~undo-tree~  .pool.ex.~undo-tree~  fun_execution_server.ex  internal.ex  pool.ex
lib/rustler_elixir_fun/pool/: pool_master.ex
media/: rustler_elixir_fun_sequence_diagram.txt
native/rustler_elixir_fun/: .Cargo.toml.~undo-tree~  .gitignore  Cargo.toml
native/rustler_elixir_fun/rustler_elixir_fun_sys/: Cargo.toml
native/rustler_elixir_fun/rustler_elixir_fun_sys/src/: lib.rs
native/rustler_elixir_fun/rustler_stored_term/src/: lib.rs
native/rustler_elixir_fun/src/: .stored_term.rs.~undo-tree~  lib.rs  stored_term.rs
native/rustler_elixir_fun/src/stored_term/: .term_box.rs.~undo-tree~
native/rustler_elixir_fun_nif/: Cargo.toml  README.md
native/rustler_elixir_fun_nif/.cargo/: config.toml
native/rustler_elixir_fun_nif/rustler_elixir_fun/: Cargo.toml  README.md
native/rustler_elixir_fun_nif/rustler_elixir_fun/src/: lib.rs
native/rustler_elixir_fun_nif/rustler_stored_term/: Cargo.toml  README.md
native/rustler_elixir_fun_nif/rustler_stored_term/src/: term_box.rs
native/rustler_elixir_fun_nif/src/: lib.rs
test/: rustler_elixir_fun_test.exs
