[package]
name = "rustler_elixir_fun"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rustler_elixir_fun"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
rustler = "0.25.0"
rustler_sys = "2.2.0"
cpuprofiler = "0.0.4"

[profile.release]
debug = true

[profile.bench]
debug = true