[package]
name = "rustler_elixir_fun"
version = "0.1.0"
authors = ["Qqwy/Wiebe-Marten Wijnja"]
edition = "2018"

[lib]
name = "rustler_elixir_fun"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
rustler = "0.25.0"
rustler_sys = "2.2.0"
rustler_elixir_fun_sys = {path = "./rustler_elixir_fun_sys/", version = "0.1.0"}
rustler_stored_term = {path = "./rustler_stored_term/", version = "0.1.0"}