[package]
name = "rustler_elixir_fun_nif"
version = "0.3.0"
authors = ["Qqwy/Wiebe-Marten Wijnja"]
edition = "2018"

[lib]
name = "rustler_elixir_fun_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
rustler_sys = "2.2.0"
rustler_elixir_fun = "0.3.0"
rustler_stored_term = "0.1.0"
