[package]
name = "rustler_elixir_fun"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Call Elixir functions from NIFs implemented in Rust."
repository = "https://github.com/Qqwy/elixir-rustler_elixir_fun"
authors = ["Qqwy/Wiebe-Marten Wijnja"]
keywords = ["elixir", "erlang", "nif", "rustler", "function_application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustler = "0.25.0"
rustler_sys = "2.2.0"
rustler_stored_term = {path = "../rustler_stored_term/", version = "0.1.0"}